Added low mem profile.